Fix test failures
Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/tests/licensedcode/data/datadriven/lic2/bsd-original-uc_and_bsd-original-uc_and_bsd-original-uc.txt.yml
+++ b/tests/licensedcode/data/datadriven/lic2/bsd-original-uc_and_bsd-original-uc_and_bsd-original-uc.txt.yml
@@ -1,5 +1,5 @@
 license_expressions:
   - bsd-original-uc
-  - other-permissive
+  - morbig-ieee-std-usage
   - other-permissive
   - bsd-original-uc
