--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -14,6 +14,12 @@ formats:
 sphinx:
    configuration: docs/source/conf.py
 
+# specify build OS
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.11"
+
 # Setting the python version and doc build requirements
 python:
   install:
