Fix tests in CI
Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/tests/licensedcode/data/datadriven/lic3/licenses_list.json.yml
+++ b/tests/licensedcode/data/datadriven/lic3/licenses_list.json.yml
@@ -1,1 +1,3 @@
-notes: this is a long list of SPDX licenses and nothing should be detected
+license_expressions:
+  - mpl-2.0
+notes: FIXME - should be empty this is a long list of SPDX licenses and nothing should be detected
