Added docs server script, dark mode & copybutton for docs
Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -141,6 +141,9 @@ docs =
     sphinx_rtd_theme >= 0.5.1
     sphinx-reredirects >= 0.1.2
     doc8 >= 0.8.1
+    sphinx-autobuild
+    sphinx-rtd-dark-mode>=1.3.0
+    sphinx-copybutton
 
 # linux-only package handling
 packages =
