Add remaining SPDX licenses
Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/tests/licensedcode/data/datadriven/lic4/openssh.LICENSE.yml
+++ b/tests/licensedcode/data/datadriven/lic4/openssh.LICENSE.yml
@@ -3,8 +3,8 @@ license_expressions:
   - openssh
   - gary-s-brown
   - other-permissive
-  - bsd-new
   - other-permissive
+  - ssh-keyscan
   - public-domain
   - public-domain-disclaimer
   - bsd-original-uc
