--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/c/clamav/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/c/clamav/stable_copyright-detailed.expected.yml
@@ -57,18 +57,18 @@ other_license_expression_spdx: (GPL-2.0-only AND GPL-2.0-only) AND GPL-2.0-only 
   AND cryptsetup-OpenSSL-exception AND GPL-2.0-only) AND GPL-2.0-only AND (GPL-2.0-or-later
   AND GPL-2.0-or-later) AND GPL-2.0-only AND (GPL-2.0-or-later AND GPL-2.0-or-later) AND GPL-2.0-only
   AND (GPL-2.0-or-later AND Autoconf-exception-generic AND GPL-2.0-only) AND GPL-2.0-only AND
-  (GPL-3.0-or-later WITH LicenseRef-scancode-autoconf-simple-exception AND GPL-3.0-only) AND
-  GPL-3.0-only AND (GPL-2.0-or-later WITH Libtool-exception AND GPL-2.0-only) AND GPL-2.0-only
-  AND (LGPL-2.0-or-later WITH Libtool-exception AND LGPL-2.0-or-later) AND LGPL-2.0-or-later
-  AND (LGPL-2.1-only AND LGPL-2.1-only) AND ((LGPL-2.1-only AND LGPL-2.1-only) AND BSD-3-Clause)
-  AND MIT AND (X11 AND LicenseRef-scancode-public-domain) AND MIT AND BSD-2-Clause AND BSD-2-Clause
-  AND BSD-3-Clause AND BSD-3-Clause AND BSD-3-Clause AND Zlib AND Zlib AND ISC AND FSFULLR AND
-  FSFUL AND FSFULLRWD AND FSFAP AND FSFAP AND bzip2-1.0.6 AND LicenseRef-scancode-public-domain
-  AND LicenseRef-scancode-public-domain AND LicenseRef-scancode-public-domain AND libtiff AND
-  (LicenseRef-scancode-public-domain AND LicenseRef-scancode-public-domain) AND (Apache-2.0
-  AND (LicenseRef-scancode-free-unknown AND Apache-2.0 WITH LicenseRef-scancode-generic-exception))
-  AND (LicenseRef-scancode-free-unknown AND Apache-2.0 WITH LicenseRef-scancode-generic-exception)
-  AND (GPL-3.0-or-later WITH Bison-exception-2.2 AND GPL-3.0-only) AND GPL-3.0-only
+  (GPL-3.0-or-later WITH Autoconf-exception-generic-3.0 AND GPL-3.0-only) AND GPL-3.0-only AND
+  (GPL-2.0-or-later WITH Libtool-exception AND GPL-2.0-only) AND GPL-2.0-only AND (LGPL-2.0-or-later
+  WITH Libtool-exception AND LGPL-2.0-or-later) AND LGPL-2.0-or-later AND (LGPL-2.1-only AND
+  LGPL-2.1-only) AND ((LGPL-2.1-only AND LGPL-2.1-only) AND BSD-3-Clause) AND MIT AND (X11 AND
+  LicenseRef-scancode-public-domain) AND MIT AND BSD-2-Clause AND BSD-2-Clause AND BSD-3-Clause
+  AND BSD-3-Clause AND BSD-3-Clause AND Zlib AND Zlib AND ISC AND FSFULLR AND FSFUL AND FSFULLRWD
+  AND FSFAP AND FSFAP AND bzip2-1.0.6 AND LicenseRef-scancode-public-domain AND LicenseRef-scancode-public-domain
+  AND LicenseRef-scancode-public-domain AND libtiff AND (LicenseRef-scancode-public-domain AND
+  LicenseRef-scancode-public-domain) AND (Apache-2.0 AND (LicenseRef-scancode-free-unknown AND
+  Apache-2.0 WITH LicenseRef-scancode-generic-exception)) AND (LicenseRef-scancode-free-unknown
+  AND Apache-2.0 WITH LicenseRef-scancode-generic-exception) AND (GPL-3.0-or-later WITH Bison-exception-2.2
+  AND GPL-3.0-only) AND GPL-3.0-only
 license_detections: []
 other_license_detections:
   - license_expression: gpl-2.0
