--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libhogweed6/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libhogweed6/copyright-detailed.expected.yml
@@ -186,7 +186,7 @@ other_license_expression_spdx: ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GP
   AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later
   AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later
   AND GPL-2.0-or-later)) AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later
-  AND GPL-2.0-or-later)) AND (GPL-3.0-or-later AND GPL-3.0-or-later WITH LicenseRef-scancode-tex-exception)
+  AND GPL-2.0-or-later)) AND (GPL-3.0-or-later AND GPL-3.0-or-later WITH Texinfo-exception)
   AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later))
   AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later))
   AND (GPL-2.0-or-later AND GPL-2.0-or-later) AND Autoconf-exception-generic AND LicenseRef-scancode-public-domain
