Fix failing test
Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/tests/licensedcode/data/datadriven/lic4/sun-bsd-no-nuclear_and_x11-tiff_and_unicode.txt.yml
+++ b/tests/licensedcode/data/datadriven/lic4/sun-bsd-no-nuclear_and_x11-tiff_and_unicode.txt.yml
@@ -1,4 +1,5 @@
 license_expressions:
+  - other-permissive
   - bsd-3-clause-no-nuclear-warranty
   - bsd-3-clause-no-nuclear-warranty
   - x11-tiff
