Regen tests to fix test failures
Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/tests/licensedcode/data/datadriven/lic3/libgcj.so.10.0.0.strings.txt.yml
+++ b/tests/licensedcode/data/datadriven/lic3/libgcj.so.10.0.0.strings.txt.yml
@@ -1,5 +1,5 @@
 license_expressions:
-  - free-unknown
+  - warranty-disclaimer
   - classpath-exception-2.0
   - gpl-2.0-plus WITH classpath-exception-2.0
   - gpl-2.0-plus WITH classpath-exception-2.0
