--- a/tests/licensedcode/data/datadriven/external/glc/url_liliq_p_1_1_91.txt.yml
+++ b/tests/licensedcode/data/datadriven/external/glc/url_liliq_p_1_1_91.txt.yml
@@ -1,5 +1,5 @@
 license_expressions:
-  - free-unknown
+  - liliq-p-1.1
 notes: |
   License test derived from a file of the BSD-licensed repository at:
   https://raw.githubusercontent.com/google/licensecheck/v0.3.1/testdata/ccurls.t1
