--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/gcc-10-base/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/gcc-10-base/copyright-detailed.expected.yml
@@ -1853,7 +1853,7 @@ license_detections:
           \ ARISING IN ANY WAY OUT OF THE USE OF THIS\nSOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY\
           \ OF SUCH DAMAGE."
     identifier: bsd_new-5869de9a-8140-2461-9d3a-19ac46ce9eca
-  - license_expression: unicode
+  - license_expression: unicode AND lgpl-2.1-plus
     matches:
       - score: '100.0'
         start_line: 1494
@@ -1926,21 +1926,21 @@ license_detections:
           not be used in advertising or otherwise to promote the sale, use or other
           dealings in these Data Files or Software without prior written authorization
           of the copyright holder.
-    identifier: unicode-311535c5-21c7-596c-a4ca-130e33826753
-  - license_expression: lgpl-2.1-plus
-    matches:
-      - score: '100.0'
-        start_line: 1550
-        end_line: 1562
-        matched_length: 112
-        match_coverage: '100.0'
-        matcher: 2-aho
+      - score: '81.51'
+        start_line: 1547
+        end_line: 1561
+        matched_length: 119
+        match_coverage: '81.51'
+        matcher: 3-seq
         license_expression: lgpl-2.1-plus
-        rule_identifier: lgpl-2.1-plus_284.RULE
+        rule_identifier: lgpl-2.1-plus_492.RULE
         rule_relevance: 100
-        rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/lgpl-2.1-plus_284.RULE
+        rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/lgpl-2.1-plus_492.RULE
         matched_text: |
-          The GNU C Library is free software; you can redistribute it and/or
+          Free Software Foundation, Inc.
+          # This file is part of the GNU C Library.
+          #
+          # The GNU C Library is free software; you can redistribute it and/or
           # modify it under the terms of the GNU Lesser General Public
           # License as published by the Free Software Foundation; either
           # version 2.1 of the License, or (at your option) any later version.
@@ -1951,9 +1951,8 @@ license_detections:
           # Lesser General Public License for more details.
           #
           # You should have received a copy of the GNU Lesser General Public
-          # License along with the GNU C Library; if not, see
-          # <https://www.gnu.org/licenses/>.
-    identifier: lgpl_2_1_plus-0eaaa8d1-6972-a2b4-31c2-33e4dd916127
+          # License along with the GNU C Library; if not,
+    identifier: unicode_and_lgpl_2_1_plus-f2786cd7-6b2f-75b9-fd53-a3d9775ee718
 other_license_detections: []
 copyright: |
   Copyright (c) 1986, 1987, 1988, 1989, 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019
