--- a/tests/licensedcode/data/datadriven/unknown/majordomo-1.1.txt.yml
+++ b/tests/licensedcode/data/datadriven/unknown/majordomo-1.1.txt.yml
@@ -1,8 +1,4 @@
 license_expressions:
-  - unknown-license-reference
-  - unknown-license-reference
-  - warranty-disclaimer
-  - unknown
-  - unknown-license-reference
+  - proprietary-license
 notes: this is a license from fossology license reference Majordomo-1.1 (Majordomo License Agreement)
   http://www.greatcircle.com/majordomo/LICENSE
