--- a/tests/formattedcode/data/common/manifests-expected.yaml
+++ b/tests/formattedcode/data/common/manifests-expected.yaml
@@ -96,7 +96,7 @@ packages:
           - score: '100.0'
             start_line: 1
             end_line: 1
-            from_file:
+            from_file: manifests/maven/persistence-api-1.0.pom
             matched_length: 8
             match_coverage: '100.0'
             matcher: 2-aho
@@ -108,7 +108,7 @@ packages:
           - score: '100.0'
             start_line: 2
             end_line: 2
-            from_file:
+            from_file: manifests/maven/persistence-api-1.0.pom
             matched_length: 7
             match_coverage: '100.0'
             matcher: 2-aho
@@ -174,7 +174,7 @@ packages:
           - score: '100.0'
             start_line: 1
             end_line: 1
-            from_file:
+            from_file: manifests/npm-license-mapping/package.json
             matched_length: 3
             match_coverage: '100.0'
             matcher: 1-hash
@@ -189,7 +189,7 @@ packages:
           - score: '100.0'
             start_line: 1
             end_line: 1
-            from_file:
+            from_file: manifests/npm-license-mapping/package.json
             matched_length: 3
             match_coverage: '100.0'
             matcher: 1-hash
@@ -254,7 +254,7 @@ packages:
           - score: '100.0'
             start_line: 1
             end_line: 1
-            from_file:
+            from_file: manifests/npm-license-string/package.json
             matched_length: 1
             match_coverage: '100.0'
             matcher: 1-spdx-id
