--- a/tests/formattedcode/data/yaml/package-and-licenses-expected.yaml
+++ b/tests/formattedcode/data/yaml/package-and-licenses-expected.yaml
@@ -92,7 +92,7 @@ packages:
           - score: '100.0'
             start_line: 1
             end_line: 1
-            from_file:
+            from_file: package-and-licenses/setup.cfg
             matched_length: 3
             match_coverage: '100.0'
             matcher: 1-hash
