--- a/setup.cfg
+++ b/setup.cfg
@@ -137,10 +137,10 @@ testing =
     pytest-rerunfailures
 
 docs =
-    Sphinx>=5.0.2
-    sphinx-rtd-theme>=1.0.0
+    Sphinx == 5.1.0
+    sphinx-rtd-theme >= 0.5.0
+    doc8 >= 0.8.1
     sphinx-reredirects >= 0.1.2
-    doc8>=0.11.2
     sphinx-autobuild
     sphinx-rtd-dark-mode>=1.3.0
     sphinx-copybutton
