--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libkrb5-3/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libkrb5-3/copyright-detailed.expected.yml
@@ -1,6 +1,6 @@
 declared_license:
 declared_license_expression: bsd-simplified AND generic-export-compliance AND cc-by-sa-3.0 AND
-  proprietary-license AND other-permissive AND mit-no-advert-export-control AND brian-gladman-3-clause
+  proprietary-license AND openvision AND mit-no-advert-export-control AND brian-gladman-3-clause
   AND bsd-new AND mit AND bsd-simplified AND mit AND bsd-new AND bsd-new AND michigan-disclaimer
   AND fsf-unlimited-no-warranty AND mit-no-advert-export-control AND openldap-2.8 AND bsd-new
   AND bsd-new AND bsd-new AND freebsd-doc AND cmu-uc AND nrl-permission AND ietf-trust AND mit-old-style
@@ -9,17 +9,16 @@ declared_license_expression: bsd-simplified AND generic-export-compliance AND cc
   AND other-permissive AND bsd-new AND rsa-md4 AND rsa-md5 AND rsa-1990 AND mit-with-modification-obligations
   AND bsd-new AND (bsd-simplified OR gpl-2.0-plus) AND bsd-new AND bsd-simplified
 declared_license_expression_spdx: BSD-2-Clause AND LicenseRef-scancode-generic-export-compliance
-  AND CC-BY-SA-3.0 AND LicenseRef-scancode-proprietary-license AND LicenseRef-scancode-other-permissive
-  AND LicenseRef-scancode-mit-no-advert-export-control AND LicenseRef-scancode-brian-gladman-3-clause
-  AND BSD-3-Clause AND MIT AND BSD-2-Clause AND MIT AND BSD-3-Clause AND BSD-3-Clause AND LicenseRef-scancode-michigan-disclaimer
-  AND FSFULLRWD AND LicenseRef-scancode-mit-no-advert-export-control AND OLDAP-2.8 AND BSD-3-Clause
-  AND BSD-3-Clause AND BSD-3-Clause AND FreeBSD-DOC AND MIT-CMU AND LicenseRef-scancode-nrl-permission
-  AND LicenseRef-scancode-ietf-trust AND LicenseRef-scancode-mit-old-style AND MIT AND BSD-2-Clause
-  AND (LicenseRef-scancode-mit-no-advert-export-control AND LicenseRef-scancode-proprietary-license)
-  AND BSD-4-Clause-UC AND LicenseRef-scancode-mit-no-advert-export-control AND BSD-4-Clause
-  AND MIT AND ISC AND ISC AND LicenseRef-scancode-other-permissive AND BSD-3-Clause AND LicenseRef-scancode-rsa-md4
-  AND RSA-MD AND LicenseRef-scancode-rsa-1990 AND HPND-export-US-modify AND BSD-3-Clause AND
-  (BSD-2-Clause OR GPL-2.0-or-later) AND BSD-3-Clause AND BSD-2-Clause
+  AND CC-BY-SA-3.0 AND LicenseRef-scancode-proprietary-license AND OpenVision AND LicenseRef-scancode-mit-no-advert-export-control
+  AND LicenseRef-scancode-brian-gladman-3-clause AND BSD-3-Clause AND MIT AND BSD-2-Clause AND
+  MIT AND BSD-3-Clause AND BSD-3-Clause AND LicenseRef-scancode-michigan-disclaimer AND FSFULLRWD
+  AND LicenseRef-scancode-mit-no-advert-export-control AND OLDAP-2.8 AND BSD-3-Clause AND BSD-3-Clause
+  AND BSD-3-Clause AND FreeBSD-DOC AND MIT-CMU AND CMU-Mach-nodoc AND LicenseRef-scancode-ietf-trust
+  AND LicenseRef-scancode-mit-old-style AND MIT AND BSD-2-Clause AND (LicenseRef-scancode-mit-no-advert-export-control
+  AND LicenseRef-scancode-proprietary-license) AND BSD-4-Clause-UC AND LicenseRef-scancode-mit-no-advert-export-control
+  AND BSD-4-Clause AND MIT AND ISC AND ISC AND LicenseRef-scancode-other-permissive AND BSD-3-Clause
+  AND LicenseRef-scancode-rsa-md4 AND RSA-MD AND LicenseRef-scancode-rsa-1990 AND HPND-export-US-modify
+  AND BSD-3-Clause AND (BSD-2-Clause OR GPL-2.0-or-later) AND BSD-3-Clause AND BSD-2-Clause
 other_license_expression:
 other_license_expression_spdx:
 license_detections:
@@ -128,23 +127,26 @@ license_detections:
           MIT trademarks in order to convey information (although in doing so,
           recognition of their trademark status should be given).
     identifier: proprietary_license-ae26591e-560d-5622-14d0-ff1ff9a49b22
-  - license_expression: other-permissive
-    license_expression_spdx: LicenseRef-scancode-other-permissive
+  - license_expression: openvision
+    license_expression_spdx: OpenVision
     matches:
-      - license_expression: other-permissive
-        spdx_license_expression: LicenseRef-scancode-other-permissive
+      - license_expression: openvision
+        spdx_license_expression: OpenVision
         from_file:
-        start_line: 82
+        start_line: 79
         end_line: 111
         matcher: 2-aho
         score: '100.0'
-        matched_length: 244
+        matched_length: 253
         match_coverage: '100.0'
         rule_relevance: 100
-        rule_identifier: other-permissive_80.RULE
-        rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/other-permissive_80.RULE
+        rule_identifier: openvision_1.RULE
+        rule_url: https://github.com/nexB/scancode-toolkit/tree/develop/src/licensedcode/data/rules/openvision_1.RULE
         matched_text: |
-          WARNING:  Retrieving the OpenVision Kerberos Administration system
+          Copyright, OpenVision Technologies, Inc., 1993-1996, All Rights
+             Reserved
+
+             WARNING:  Retrieving the OpenVision Kerberos Administration system
              source code, as described below, indicates your acceptance of the
              following terms.  If you do not agree to the following terms, do
              not retrieve the OpenVision Kerberos administration system.
@@ -174,7 +176,7 @@ license_detections:
              continuing Kerberos technology development and our gratitude for
              the valuable work which has been performed by MIT and the Kerberos
              community.
-    identifier: other_permissive-46e6e2b3-dadb-a39b-50ee-b8a8739b526d
+    identifier: openvision-b949c9b9-c46a-bdde-9343-730f91a4f4a8
   - license_expression: mit-no-advert-export-control
     license_expression_spdx: LicenseRef-scancode-mit-no-advert-export-control
     matches:
@@ -873,10 +875,10 @@ license_detections:
              SOFTWARE.
     identifier: cmu_uc-81218bbc-ee50-f7e2-791a-f18dcff965fd
   - license_expression: nrl-permission
-    license_expression_spdx: LicenseRef-scancode-nrl-permission
+    license_expression_spdx: CMU-Mach-nodoc
     matches:
       - license_expression: nrl-permission
-        spdx_license_expression: LicenseRef-scancode-nrl-permission
+        spdx_license_expression: CMU-Mach-nodoc
         from_file:
         start_line: 735
         end_line: 743
