Update CI runners and python version
Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ jobs:
       parameters:
           job_name: ubuntu20_cpython
           image_name: ubuntu-20.04
-          python_versions: ['3.7', '3.8', '3.9', '3.10', '3.11']
+          python_versions: ['3.8', '3.9', '3.10', '3.11', '3.12']
           test_suites:
               all: venv/bin/pytest -n 2 -vvs
 
@@ -19,7 +19,7 @@ jobs:
       parameters:
           job_name: ubuntu22_cpython
           image_name: ubuntu-22.04
-          python_versions: ['3.7', '3.8', '3.9', '3.10', '3.11']
+          python_versions: ['3.8', '3.9', '3.10', '3.11', '3.12']
           test_suites:
               all: venv/bin/pytest -n 2 -vvs
 
@@ -27,7 +27,7 @@ jobs:
       parameters:
           job_name: macos11_cpython
           image_name: macOS-11
-          python_versions: ['3.7', '3.8', '3.9', '3.10', '3.11']
+          python_versions: ['3.8', '3.9', '3.10', '3.11', '3.12']
           test_suites:
               all: venv/bin/pytest -n 2 -vvs
 
@@ -35,7 +35,7 @@ jobs:
       parameters:
           job_name: macos12_cpython
           image_name: macOS-12
-          python_versions: ['3.7', '3.8', '3.9', '3.10', '3.11']
+          python_versions: ['3.8', '3.9', '3.10', '3.11', '3.12']
           test_suites:
               all: venv/bin/pytest -n 2 -vvs
 
@@ -43,7 +43,15 @@ jobs:
       parameters:
           job_name: macos13_cpython
           image_name: macOS-13
-          python_versions: ['3.7', '3.8', '3.9', '3.10', '3.11']
+          python_versions: ['3.8', '3.9', '3.10', '3.11', '3.12']
+          test_suites:
+              all: venv/bin/pytest -n 2 -vvs
+
+    - template: etc/ci/azure-posix.yml
+      parameters:
+          job_name: macos14_cpython
+          image_name: macOS-14
+          python_versions: ['3.8', '3.9', '3.10', '3.11', '3.12']
           test_suites:
               all: venv/bin/pytest -n 2 -vvs
 
@@ -51,7 +59,7 @@ jobs:
       parameters:
           job_name: win2019_cpython
           image_name: windows-2019
-          python_versions: ['3.7', '3.8', '3.9', '3.10', '3.11']
+          python_versions: ['3.8', '3.9', '3.10', '3.11', '3.12']
           test_suites:
               all: venv\Scripts\pytest -n 2 -vvs
 
@@ -59,6 +67,6 @@ jobs:
       parameters:
           job_name: win2022_cpython
           image_name: windows-2022
-          python_versions: ['3.7', '3.8', '3.9', '3.10', '3.11']
+          python_versions: ['3.8', '3.9', '3.10', '3.11', '3.12']
           test_suites:
               all: venv\Scripts\pytest -n 2 -vvs
