Pin pypa/gh-action-pypi-publish to v1 release
Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/.github/workflows/scancode-release.yml
+++ b/.github/workflows/scancode-release.yml
@@ -592,6 +592,6 @@ jobs:
           ls -al dist
 
       - name: Publish distributions to PyPI
-        uses: pypa/gh-action-pypi-publish@master
+        uses: pypa/gh-action-pypi-publish@release/v1
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
